// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render NavAvatar, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavComposer, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <styled.li
          className="prime left"
          left={true}
          prime={true}
          status={true}
>
          <Connect(ModalLauncher)
                    style={
                              Object {
                                        "textDecoration": "none",
                                      }
                    }
                    unmarked={true}
                    with={
                              Object {
                                        "id": "hints/auto-save",
                                        "info": Object {
                                          "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline! You can safely close your browser and turn off the device or computer. Just remember to use the same browser.",
                                          "title": "Never Loose Your Work!",
                                        },
                                      }
                    }
          >
                    <span>
                              Draft
                    </span>
          </Connect(ModalLauncher)>
</styled.li>,
        <styled.li
          center={true}
          className="prime center"
          prime={true}
>
          <Unknown
                    className="indexRouteLink"
                    to="/"
          >
                    <Unknown />
          </Unknown>
</styled.li>,
        <styled.li
          className="prime right"
          prime={true}
          right={true}
>
          <NavLinkSend
                    editorStatus={undefined}
                    userRole={undefined}
                    userStatus={undefined}
          />
</styled.li>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(ModalLauncher)
            style={
                        Object {
                                    "textDecoration": "none",
                                  }
            }
            unmarked={true}
            with={
                        Object {
                                    "id": "hints/auto-save",
                                    "info": Object {
                                      "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline! You can safely close your browser and turn off the device or computer. Just remember to use the same browser.",
                                      "title": "Never Loose Your Work!",
                                    },
                                  }
            }
>
            <span>
                        Draft
            </span>
</Connect(ModalLauncher)>,
          "className": "prime left",
          "left": true,
          "prime": true,
          "status": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              false,
              false,
              <span>
                Draft
</span>,
            ],
            "style": Object {
              "textDecoration": "none",
            },
            "unmarked": true,
            "with": Object {
              "id": "hints/auto-save",
              "info": Object {
                "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline! You can safely close your browser and turn off the device or computer. Just remember to use the same browser.",
                "title": "Never Loose Your Work!",
              },
            },
          },
          "ref": null,
          "rendered": Array [
            false,
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Draft",
              },
              "ref": null,
              "rendered": "Draft",
              "type": "span",
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": true,
          "children": <Unknown
            className="indexRouteLink"
            to="/"
>
            <Unknown />
</Unknown>,
          "className": "prime center",
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown />,
            "className": "indexRouteLink",
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavLinkSend
            editorStatus={undefined}
            userRole={undefined}
            userStatus={undefined}
/>,
          "className": "prime right",
          "prime": true,
          "right": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "editorStatus": undefined,
            "userRole": undefined,
            "userStatus": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <styled.li
            className="prime left"
            left={true}
            prime={true}
            status={true}
>
            <Connect(ModalLauncher)
                        style={
                                    Object {
                                                "textDecoration": "none",
                                              }
                        }
                        unmarked={true}
                        with={
                                    Object {
                                                "id": "hints/auto-save",
                                                "info": Object {
                                                  "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline! You can safely close your browser and turn off the device or computer. Just remember to use the same browser.",
                                                  "title": "Never Loose Your Work!",
                                                },
                                              }
                        }
            >
                        <span>
                                    Draft
                        </span>
            </Connect(ModalLauncher)>
</styled.li>,
          <styled.li
            center={true}
            className="prime center"
            prime={true}
>
            <Unknown
                        className="indexRouteLink"
                        to="/"
            >
                        <Unknown />
            </Unknown>
</styled.li>,
          <styled.li
            className="prime right"
            prime={true}
            right={true}
>
            <NavLinkSend
                        editorStatus={undefined}
                        userRole={undefined}
                        userStatus={undefined}
            />
</styled.li>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(ModalLauncher)
              style={
                            Object {
                                          "textDecoration": "none",
                                        }
              }
              unmarked={true}
              with={
                            Object {
                                          "id": "hints/auto-save",
                                          "info": Object {
                                            "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline! You can safely close your browser and turn off the device or computer. Just remember to use the same browser.",
                                            "title": "Never Loose Your Work!",
                                          },
                                        }
              }
>
              <span>
                            Draft
              </span>
</Connect(ModalLauncher)>,
            "className": "prime left",
            "left": true,
            "prime": true,
            "status": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                false,
                false,
                <span>
                  Draft
</span>,
              ],
              "style": Object {
                "textDecoration": "none",
              },
              "unmarked": true,
              "with": Object {
                "id": "hints/auto-save",
                "info": Object {
                  "text": "Your text and images are saved automatically onto your device as you type. Even if you’re offline! You can safely close your browser and turn off the device or computer. Just remember to use the same browser.",
                  "title": "Never Loose Your Work!",
                },
              },
            },
            "ref": null,
            "rendered": Array [
              false,
              false,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Draft",
                },
                "ref": null,
                "rendered": "Draft",
                "type": "span",
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "center": true,
            "children": <Unknown
              className="indexRouteLink"
              to="/"
>
              <Unknown />
</Unknown>,
            "className": "prime center",
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown />,
              "className": "indexRouteLink",
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavLinkSend
              editorStatus={undefined}
              userRole={undefined}
              userStatus={undefined}
/>,
            "className": "prime right",
            "prime": true,
            "right": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "editorStatus": undefined,
              "userRole": undefined,
              "userStatus": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavConnectionStatus, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <styled.div />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavGeneral, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <styled.li
          className="prime left"
          left={true}
          prime={true}
>
          <NavLink
                    className={undefined}
                    onClick={[Function]}
                    to="/features"
          >
                    Features
                    <styled.span>
                               
                              <Unknown
                                        style={
                                                  Object {
                                                            "height": "1em",
                                                            "paddingBottom": ".15em",
                                                          }
                                        }
                              />
                    </styled.span>
          </NavLink>
</styled.li>,
        <styled.li>
          <NavLink
                    className={undefined}
                    onClick={[Function]}
                    to="/submit"
          >
                    Submi
                    <styled.span>
                              ssions 
                    </styled.span>
                    <styled.span>
                              t
                    </styled.span>
          </NavLink>
</styled.li>,
        <styled.li
          center={true}
          className="prime center"
          prime={true}
>
          <Unknown
                    className="indexRouteLink"
                    onClick={[Function]}
                    to="/"
          >
                    <Unknown />
          </Unknown>
</styled.li>,
        <styled.li>
          <Unknown
                    className={undefined}
                    userImage={undefined}
                    userRole={undefined}
                    userStatus={undefined}
          >
                    <styled.span>
                              My 
                    </styled.span>
                    <styled.span>
                              Account 
                    </styled.span>
                    <styled.span>
                              Me 
                    </styled.span>
                    <Unknown
                              image={undefined}
                    />
          </Unknown>
</styled.li>,
        <styled.li
          className="prime right"
          narrow={true}
          prime={true}
          right={true}
>
          <Unknown
                    className={undefined}
                    onClick={[Function]}
          >
                    Menu
                     
                    <Unknown
                              inverse={false}
                    />
                     
          </Unknown>
</styled.li>,
      ],
      "onMouseOver": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavLink
            className={undefined}
            onClick={[Function]}
            to="/features"
>
            Features
            <styled.span>
                         
                        <Unknown
                                    style={
                                                Object {
                                                            "height": "1em",
                                                            "paddingBottom": ".15em",
                                                          }
                                    }
                        />
            </styled.span>
</NavLink>,
          "className": "prime left",
          "left": true,
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "Features",
              <styled.span>
                 
                <Unknown
                                style={
                                                Object {
                                                                "height": "1em",
                                                                "paddingBottom": ".15em",
                                                              }
                                }
                />
</styled.span>,
            ],
            "className": undefined,
            "onClick": [Function],
            "to": "/features",
          },
          "ref": null,
          "rendered": Array [
            "Features",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  " ",
                  <Unknown
                    style={
                                        Object {
                                                            "height": "1em",
                                                            "paddingBottom": ".15em",
                                                          }
                    }
/>,
                ],
              },
              "ref": null,
              "rendered": Array [
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "style": Object {
                      "height": "1em",
                      "paddingBottom": ".15em",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavLink
            className={undefined}
            onClick={[Function]}
            to="/submit"
>
            Submi
            <styled.span>
                        ssions 
            </styled.span>
            <styled.span>
                        t
            </styled.span>
</NavLink>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "Submi",
              <styled.span>
                ssions 
</styled.span>,
              <styled.span>
                t
</styled.span>,
            ],
            "className": undefined,
            "onClick": [Function],
            "to": "/submit",
          },
          "ref": null,
          "rendered": Array [
            "Submi",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "ssions ",
              },
              "ref": null,
              "rendered": "ssions ",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "t",
              },
              "ref": null,
              "rendered": "t",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": true,
          "children": <Unknown
            className="indexRouteLink"
            onClick={[Function]}
            to="/"
>
            <Unknown />
</Unknown>,
          "className": "prime center",
          "prime": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Unknown />,
            "className": "indexRouteLink",
            "onClick": [Function],
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            className={undefined}
            userImage={undefined}
            userRole={undefined}
            userStatus={undefined}
>
            <styled.span>
                        My 
            </styled.span>
            <styled.span>
                        Account 
            </styled.span>
            <styled.span>
                        Me 
            </styled.span>
            <Unknown
                        image={undefined}
            />
</Unknown>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <styled.span>
                My 
</styled.span>,
              <styled.span>
                Account 
</styled.span>,
              <styled.span>
                Me 
</styled.span>,
              <Unknown
                image={undefined}
/>,
            ],
            "className": undefined,
            "userImage": undefined,
            "userRole": undefined,
            "userStatus": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "My ",
              },
              "ref": null,
              "rendered": "My ",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Account ",
              },
              "ref": null,
              "rendered": "Account ",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Me ",
              },
              "ref": null,
              "rendered": "Me ",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "image": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            className={undefined}
            onClick={[Function]}
>
            Menu
             
            <Unknown
                        inverse={false}
            />
             
</Unknown>,
          "className": "prime right",
          "narrow": true,
          "prime": true,
          "right": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "Menu",
              " ",
              <Unknown
                inverse={false}
/>,
              " ",
            ],
            "className": undefined,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "Menu",
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "inverse": false,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            " ",
          ],
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <styled.li
            className="prime left"
            left={true}
            prime={true}
>
            <NavLink
                        className={undefined}
                        onClick={[Function]}
                        to="/features"
            >
                        Features
                        <styled.span>
                                     
                                    <Unknown
                                                style={
                                                            Object {
                                                                        "height": "1em",
                                                                        "paddingBottom": ".15em",
                                                                      }
                                                }
                                    />
                        </styled.span>
            </NavLink>
</styled.li>,
          <styled.li>
            <NavLink
                        className={undefined}
                        onClick={[Function]}
                        to="/submit"
            >
                        Submi
                        <styled.span>
                                    ssions 
                        </styled.span>
                        <styled.span>
                                    t
                        </styled.span>
            </NavLink>
</styled.li>,
          <styled.li
            center={true}
            className="prime center"
            prime={true}
>
            <Unknown
                        className="indexRouteLink"
                        onClick={[Function]}
                        to="/"
            >
                        <Unknown />
            </Unknown>
</styled.li>,
          <styled.li>
            <Unknown
                        className={undefined}
                        userImage={undefined}
                        userRole={undefined}
                        userStatus={undefined}
            >
                        <styled.span>
                                    My 
                        </styled.span>
                        <styled.span>
                                    Account 
                        </styled.span>
                        <styled.span>
                                    Me 
                        </styled.span>
                        <Unknown
                                    image={undefined}
                        />
            </Unknown>
</styled.li>,
          <styled.li
            className="prime right"
            narrow={true}
            prime={true}
            right={true}
>
            <Unknown
                        className={undefined}
                        onClick={[Function]}
            >
                        Menu
                         
                        <Unknown
                                    inverse={false}
                        />
                         
            </Unknown>
</styled.li>,
        ],
        "onMouseOver": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavLink
              className={undefined}
              onClick={[Function]}
              to="/features"
>
              Features
              <styled.span>
                             
                            <Unknown
                                          style={
                                                        Object {
                                                                      "height": "1em",
                                                                      "paddingBottom": ".15em",
                                                                    }
                                          }
                            />
              </styled.span>
</NavLink>,
            "className": "prime left",
            "left": true,
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Features",
                <styled.span>
                   
                  <Unknown
                                    style={
                                                      Object {
                                                                        "height": "1em",
                                                                        "paddingBottom": ".15em",
                                                                      }
                                    }
                  />
</styled.span>,
              ],
              "className": undefined,
              "onClick": [Function],
              "to": "/features",
            },
            "ref": null,
            "rendered": Array [
              "Features",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    " ",
                    <Unknown
                      style={
                                            Object {
                                                                  "height": "1em",
                                                                  "paddingBottom": ".15em",
                                                                }
                      }
/>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "style": Object {
                        "height": "1em",
                        "paddingBottom": ".15em",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavLink
              className={undefined}
              onClick={[Function]}
              to="/submit"
>
              Submi
              <styled.span>
                            ssions 
              </styled.span>
              <styled.span>
                            t
              </styled.span>
</NavLink>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Submi",
                <styled.span>
                  ssions 
</styled.span>,
                <styled.span>
                  t
</styled.span>,
              ],
              "className": undefined,
              "onClick": [Function],
              "to": "/submit",
            },
            "ref": null,
            "rendered": Array [
              "Submi",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "ssions ",
                },
                "ref": null,
                "rendered": "ssions ",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "t",
                },
                "ref": null,
                "rendered": "t",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "center": true,
            "children": <Unknown
              className="indexRouteLink"
              onClick={[Function]}
              to="/"
>
              <Unknown />
</Unknown>,
            "className": "prime center",
            "prime": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <Unknown />,
              "className": "indexRouteLink",
              "onClick": [Function],
              "to": "/",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              className={undefined}
              userImage={undefined}
              userRole={undefined}
              userStatus={undefined}
>
              <styled.span>
                            My 
              </styled.span>
              <styled.span>
                            Account 
              </styled.span>
              <styled.span>
                            Me 
              </styled.span>
              <Unknown
                            image={undefined}
              />
</Unknown>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <styled.span>
                  My 
</styled.span>,
                <styled.span>
                  Account 
</styled.span>,
                <styled.span>
                  Me 
</styled.span>,
                <Unknown
                  image={undefined}
/>,
              ],
              "className": undefined,
              "userImage": undefined,
              "userRole": undefined,
              "userStatus": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "My ",
                },
                "ref": null,
                "rendered": "My ",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Account ",
                },
                "ref": null,
                "rendered": "Account ",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Me ",
                },
                "ref": null,
                "rendered": "Me ",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "image": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Unknown
              className={undefined}
              onClick={[Function]}
>
              Menu
               
              <Unknown
                            inverse={false}
              />
               
</Unknown>,
            "className": "prime right",
            "narrow": true,
            "prime": true,
            "right": true,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Menu",
                " ",
                <Unknown
                  inverse={false}
/>,
                " ",
              ],
              "className": undefined,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              "Menu",
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "inverse": false,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              " ",
            ],
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavItem, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
        Object {
            "color": Object {
              "background": [Function],
              "brand": [Function],
              "foreground": [Function],
              "highlight": [Function],
            },
            "effects": Object {
              "borderRadius": Object {
                "med": 0.5,
                "small": [Function],
              },
            },
            "elements": Object {
              "thickBorder": [Function],
            },
            "layer": Object {
              "card": 30,
              "nav": 20,
              "overlay": 40,
              "tuck": -1,
              "up": 10,
            },
            "opacity": Object {
              "half": 0.5,
              "least": 0.125,
              "most": 0.85,
            },
            "size": Object {
              "block": Object {
                "border": 8,
                "column": Object {
                  "l": 820,
                  "m": 750,
                },
                "padding": 1.5,
                "spacing": 1,
              },
              "breakpoint": Object {
                "exact": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "max": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "min": Object {
                  "l": [Function],
                  "m": [Function],
                  "s": [Function],
                  "xl": [Function],
                  "xs": [Function],
                  "xxl": [Function],
                },
                "stops": Object {
                  "max": 1600,
                  "min": 320,
                },
              },
              "font": Object {
                "auto": Array [
                  "
                ",
                  "
        		@media (min-width: ",
                  "32.5625",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "32.5",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (max-width: ",
                  "20",
                  "em) {
        			",
                  "font-size: 	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  " ",
                  "
        		@media (min-width: ",
                  "100.0625",
                  "em) {
        			",
                  "font-size:	",
                  [Function],
                  "px;",
                  "
        		}
        	",
                  ";
              ",
                ],
                "l": 23,
                "m": 20,
                "make": Object {
                  "larger": 3,
                  "normal": 1,
                  "smaller": 0.85,
                  "tiny": 0.65,
                },
                "s": 18,
                "xs": 17,
              },
            },
            "typography": Object {
              "text": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Lora', Georgia, serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                ",
                ],
                "font": "'Lora', Georgia, serif",
                "lineHeight": 1.75,
              },
              "title": Object {
                "auto": Array [
                  "
                  color: ",
                  [Function],
                  ";
                  font-family: ",
                  "'Exo 2', Arial, sans-serif",
                  ";
                  letter-spacing: 0.025em;
                  line-height: ",
                  [Function],
                  "em;
                  font-weight: ",
                  "600",
                  ";
                  margin: 0;
                ",
                ],
                "font": "'Exo 2', Arial, sans-serif",
                "lineHeight": 1.15,
              },
            },
          }
    }
>
    <styled.li />
</ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavLink, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NavLink />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeClassName": "active",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeClassName": "active",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavLogo, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Styled(Component) />,
      "title": "Analog.Cafe",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Styled(Component) />,
        "title": "Analog.Cafe",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavLogoLink, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "activeClassName": "active",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "activeClassName": "active",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavMore, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": undefined,
      "onClick": [Function],
      "to": "/sign-in",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": undefined,
        "onClick": [Function],
        "to": "/sign-in",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render NavWrapper, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.nav />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-brqgnP kDNvdM",
    },
    "ref": null,
    "rendered": null,
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-brqgnP kDNvdM",
      },
      "ref": null,
      "rendered": null,
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
